--- a/app/views/history/publish-changes/iteration-aug-15.html
+++ b/app/views/history/publish-changes/iteration-aug-15.html
@@ -23,25 +23,76 @@
         New
       </h2>
       <p>Fields are empty</p>
-      {{ macros.aboutYourOrgPublish('new') }}
+      <div class="add-double-bottom-margin status-box">
+        <span class="govuk-tag phase-tag-no-content add-bottom-margin">Empty</span>
+        <p>You need to complete and publish this information.</p>
+        <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
+        <h3 class="govuk-heading-m">Preview on a course</h3>
+        <p>This information will show on all your courses.</p>
+        <p>Preview any course to see how it will look to applicants.</p>
+        <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
+        <h3 class="govuk-heading-m">Publish</h3>
+        <p>You can make changes to this after publishing it.</p>
+        <a href="#" class="govuk-button govuk-!-margin-bottom-2">Publish</a>
+      </div>
     </div>
 
     <div class="govuk-grid-column-one-quarter">
       <h2 class="govuk-heading-m">First draft</h2>
       <p>Edits have been made</p>
-      {{ macros.aboutYourOrgPublish('draft') }}
+
+      <div class="add-double-bottom-margin status-box">
+        <div class="unpublished-changes">
+          <span class="govuk-tag phase-tag-draft add-bottom-margin">Draft</span>
+          <p>You have unpublished changes.</p>
+          <p class="add-top-margin">Last saved:<br>12 Jan 2019 by Jane Doe</p>
+        </div>
+        <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
+        <h3 class="govuk-heading-m">Preview on a course</h3>
+        <p>This information will show on all your courses.</p>
+        <p>Preview any course to see how it will look to applicants.</p>
+        <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
+        <h3 class="govuk-heading-m">Publish</h3>
+        <p>You can make changes to this after publishing it.</p>
+        <a href="#" class="govuk-button govuk-!-margin-bottom-2">Publish</a>
+      </div>
     </div>
 
     <div class="govuk-grid-column-one-quarter">
       <h2 class="govuk-heading-m">Published</h2>
       <p>No subsequent edits made</p>
-      {{ macros.aboutYourOrgPublish('published') }}
+      <div class="add-double-bottom-margin status-box">
+          <span class="govuk-tag phase-tag-published add-bottom-margin">Published</span>
+          <p>Last published:<br>12 Jan 2019 by Rita Cosca</p>
+      </div>
     </div>
 
     <div class="govuk-grid-column-one-quarter">
       <h2 class="govuk-heading-m">Second draft</h2>
       <p>Edits made after publishing</p>
-      {{ macros.aboutYourOrgPublish('draft', true) }}
+
+      <div class="add-double-bottom-margin status-box">
+        <div class="unpublished-changes">
+          <span class="govuk-tag phase-tag-draft add-bottom-margin">Draft</span>
+          <p>You have unpublished changes.</p>
+          <p class="add-top-margin">Last saved:<br>12 Jan 2019 by Jane Doe</p>
+        </div>
+        <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
+
+        <p>Last published:<br>12 Jan 2019 by Rita Cosca</p>
+
+        <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
+
+        <h3 class="govuk-heading-m">Preview on a course</h3>
+        <p>This information will show on all your courses.</p>
+        <p>Preview any course to see how it will look to applicants.</p>
+
+        <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
+
+        <h3 class="govuk-heading-m">Publish</h3>
+        <p>You can make changes to this after publishing it.</p>
+        <a href="#" class="govuk-button govuk-!-margin-bottom-2">Publish</a>
+      </div>
     </div>
   </div>
 
@@ -53,25 +104,117 @@
         New
       </h2>
       <p>Fields are empty</p>
-      {{ macros.coursePublish('new') }}
+
+      <div class="add-double-bottom-margin status-box">
+        <span class="govuk-tag phase-tag-no-content add-bottom-margin">Empty</span>
+        <p>You need to complete and publish this information.</p>
+        <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
+
+        <h3 class="govuk-heading-m">Preview</h3>
+        <p>See how this course looks with your changes.</p>
+        <p>Preview your course to check for mistakes before publishing.</p>
+        <p>
+          <a href="#">Preview course</a>
+        </p>
+        <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
+
+        <h3 class="govuk-heading-m">Publish</h3>
+        <p>Publish your changes.</p>
+
+        <a href="#" class="govuk-button govuk-!-margin-bottom-2">Publish</a>
+        <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
+
+        <h3 class="govuk-heading-m">View on website</h3>
+        <p>See how this course currently looks to applicants:</p>
+        <p class="govuk-!-margin-bottom-0">
+          <a href="#">View on website</a>
+        </p>
+      </div>
     </div>
 
     <div class="govuk-grid-column-one-quarter">
       <h2 class="govuk-heading-m">First draft</h2>
       <p>Edits have been made</p>
-      {{ macros.coursePublish('draft') }}
+
+      <div class="add-double-bottom-margin status-box">
+        <span class="govuk-tag phase-tag-draft add-bottom-margin">Draft</span>
+        <p>You have unpublished changes.</p>
+        <p class="add-top-margin">Last saved:<br>12 Jan 2019 by Jane Doe</p>
+        <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
+
+        <h3 class="govuk-heading-m">Preview</h3>
+        <p>See how this course looks with your changes.</p>
+        <p>Preview your course to check for mistakes before publishing.</p>
+        <p>
+          <a href="#">Preview course</a>
+        </p>
+        <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
+
+        <h3 class="govuk-heading-m">Publish</h3>
+        <p>Publish your changes.</p>
+
+        <a href="#" class="govuk-button govuk-!-margin-bottom-2">Publish</a>
+        <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
+
+        <h3 class="govuk-heading-m">View on website</h3>
+        <p>See how this course currently looks to applicants:</p>
+        <p class="govuk-!-margin-bottom-0">
+          <a href="#">View on website</a>
+        </p>
+      </div>
     </div>
 
     <div class="govuk-grid-column-one-quarter">
       <h2 class="govuk-heading-m">Published</h2>
       <p>No subsequent edits made</p>
-      {{ macros.coursePublish('published') }}
+
+      <div class="add-double-bottom-margin status-box">
+        <span class="govuk-tag phase-tag-published add-bottom-margin">Published</span>
+
+        <p>Last published:<br>12 Jan 2019 by Rita Cosca</p>
+        <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
+
+        <h3 class="govuk-heading-m">View on website</h3>
+        <p>See how this course currently looks to applicants:</p>
+        <p class="govuk-!-margin-bottom-0">
+          <a href="#">View on website</a>
+        </p>
+      </div>
     </div>
 
     <div class="govuk-grid-column-one-quarter">
       <h2 class="govuk-heading-m">Second draft</h2>
       <p>Edits made after publishing</p>
-      {{ macros.coursePublish('draft', true) }}
+
+      <div class="add-double-bottom-margin status-box">
+        <span class="govuk-tag phase-tag-draft add-bottom-margin">Draft</span>
+        <p>You have unpublished changes.</p>
+        <p class="add-top-margin">Last saved:<br>12 Jan 2019 by Jane Doe</p>
+        <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
+
+        <p>Last published:<br>12 Jan 2019 by Rita Cosca</p>
+        <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
+
+        <h3 class="govuk-heading-m">Preview</h3>
+        <p>See how this course looks with your changes.</p>
+        <p>Preview your course to check for mistakes before publishing.</p>
+        <p>
+          <a href="#">Preview course</a>
+        </p>
+        <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
+
+        <h3 class="govuk-heading-m">Publish</h3>
+        <p>Publish your changes.</p>
+
+        <a href="#" class="govuk-button govuk-!-margin-bottom-2">Publish</a>
+        <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
+
+        <h3 class="govuk-heading-m">View on website</h3>
+        <p>See how this course currently looks to applicants:</p>
+        <p class="govuk-!-margin-bottom-0">
+          <a href="#">View on website</a>
+        </p>
+      </div>
     </div>
   </div>
 
